# stella

./: .gitignore  CMakeLists.txt
shaders/: fs.glsl  vs.glsl
src/: glad.c  main.cpp  shader.cpp  shader.hpp
src/glad/: glad.h
