CMAKE_MINIMUM_REQUIRED(VERSION 3.0)
PROJECT(Stella)

SET(CMAKE_BUILD_TYPE Debug)
SET(CMAKE_CXX_FLAGS_DEBUG -DDEBUG)
SET(CMAKE_C_STANDARD 11)
SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_C_COMPILER clang)
SET(CMAKE_CXX_COMPILER clang++)
SET(CMAKE_EXPORT_COMPILE_COMMANDS ON)

SET(OpenGL_GL_PREFERENCE GLVND)
FIND_PACKAGE(glfw3 3.3 REQUIRED)
FIND_PACKAGE(OpenGL REQUIRED)

INCLUDE_DIRECTORIES("${CMAKE_CURRENT_SOURCE_DIR}/src/")
FILE(GLOB_RECURSE SRC_FILES ${CMAKE_CURRENT_SOURCE_DIR} "src/*.c*")
ADD_EXECUTABLE(stella ${SRC_FILES})
TARGET_INCLUDE_DIRECTORIES(stella PUBLIC ${OPENGL_INCLUDE_DIR})
TARGET_LINK_LIBRARIES(stella glfw)
TARGET_LINK_LIBRARIES(stella ${OPENGL_gl_LIBRARY} ${CMAKE_DL_LIBS})

IF (EXISTS "${CMAKE_CURRENT_BINARY_DIR}/compile_commands.json")
  EXECUTE_PROCESS(COMMAND ${CMAKE_COMMAND} -E copy_if_different
    ${CMAKE_CURRENT_BINARY_DIR}/compile_commands.json
    ${CMAKE_CURRENT_SOURCE_DIR}/compile_commands.json
    )
ENDIF()

